fix(front): Fix headline wrap on small screens

--- a/frontend/src/app/features/home/home.component.css
+++ b/frontend/src/app/features/home/home.component.css
@@ -28,6 +28,7 @@ img {
 	font-weight: bold; /* Optionnel, pour un texte plus épais */
 	font-family: 'Montserrat', sans-serif;
 	letter-spacing: 5px;
+  text-wrap: nowrap;
   }
 
   h2 {
